2011-07-13  Adam Barth  <abarth@webkit.org>

        gardening server should have an API for parsing changelogs
        https://bugs.webkit.org/show_bug.cgi?id=64495

        Reviewed by Eric Seidel.

        This patch exposes much of the same information from CommitInfo in a
        dictionary form, which is easier to send over-the-wire as JSON to the
        frontend.

        * Scripts/webkitpy/common/checkout/checkout.py:
        * Scripts/webkitpy/common/checkout/checkout_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:
        * Scripts/webkitpy/tool/servers/gardeningserver.py:
        * Scripts/webkitpy/tool/servers/gardeningserver_unittest.py:
        * Scripts/webkitpy/tool/servers/reflectionhandler.py:

2011-07-13  Eric Seidel  <eric@webkit.org>

        REGRESSION: GitTestWithMock.test_create_patch fails
        https://bugs.webkit.org/show_bug.cgi?id=62945

        Reviewed by Daniel Bates.

        I was not able to reproduce the exact failure seen in the bug,
        however this test was failing on my machine for other reasons.

        I went through and did an audit of our run_command usage, it's
        entirely in scm classes after this change.  (Not surprising given
        that scm.py was the second file ever created in webkit.py.)

        The real bug I'm fixing here is that we were setting executive.should_log
        when the value had changed to executive._should_log.  Now we set the right one
        and the test works again.

        * Scripts/webkitpy/common/checkout/checkout.py:
        * Scripts/webkitpy/common/checkout/scm/git.py:
        * Scripts/webkitpy/common/checkout/scm/scm.py:
        * Scripts/webkitpy/common/checkout/scm/scm_unittest.py:
        * Scripts/webkitpy/common/checkout/scm/svn.py:

2011-07-13  Ilya Sherman  <isherman@chromium.org>

        Fix WTF header guard style check
        https://bugs.webkit.org/show_bug.cgi?id=64488

        Reviewed by David Levin.
